--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "erikasalcedo_",
   "version": "0.1.0",
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -9,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-rounded-image": "^2.0.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
