--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "erikasalcedo_",
+  "homepage": "http://es2013.github.io/erikasalcedo_",
   "version": "0.1.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
@@ -25,7 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
